--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
         <!-- Header -->
         <header class="flex items-center justify-between mb-4">
-            <h2 class="text-2xl md:text-3xl font-black text-white tracking-tight">記得要同大家報CD</h2>
+            <h2 class="text-2xl md:text-3xl font-black text-white tracking-tight">記得同大家報技能CD</h2>
             <button id="settings-btn"
                 class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-4 py-2 rounded-lg transition">
                 ⚙️
@@ -361,7 +361,6 @@
         <source src="sounds/ready.mp3" type="audio/mpeg">
     </audio>
 
-    <script src="firebase-config.js"></script>
     <script src="app.js" type="module"></script>
 
 </body>
