fix: improve mobile layout and prevent misclick after reset

--- a/index.html
+++ b/index.html
@@ -156,19 +156,19 @@
     </div>
 
     <!-- Main App Container -->
-    <div id="app-container" class="hidden h-full flex flex-col p-4 md:p-6">
+    <div id="app-container" class="hidden h-full flex flex-col p-3 md:p-6">
 
         <!-- Header -->
-        <header class="flex items-center justify-between mb-4">
-            <h2 class="text-2xl md:text-3xl font-black text-white tracking-tight">記得同大家報技能CD</h2>
+        <header class="flex items-center justify-between mb-2">
+            <h2 class="text-xl md:text-3xl font-black text-white tracking-tight">記得同大家報技能CD</h2>
             <button id="settings-btn"
-                class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-4 py-2 rounded-lg transition">
+                class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-2 rounded-lg transition text-sm">
                 ⚙️
             </button>
         </header>
 
         <!-- Spell Grid (5 Rows x 3 Cols) -->
-        <div class="flex-1 flex flex-col justify-around gap-3 md:gap-4">
+        <div class="flex-1 flex flex-col justify-around gap-2 md:gap-4">
 
             <!-- TOP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
