--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
             filter: brightness(0.4) grayscale(0.3);
         }
 
+        /* Haste indicator dots */
+        .haste-dot {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            display: inline-block;
+            margin-left: 4px;
+            transition: all 0.3s ease;
+        }
+
+        .haste-dot.active {
+            background: #22c55e;
+            box-shadow: 0 0 8px rgba(34, 197, 94, 0.6);
+        }
+
+        .haste-dot.inactive {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
         /* Cooldown overlay container */
         .cooldown-overlay {
             position: absolute;
@@ -160,15 +179,21 @@
 
         <!-- Header -->
         <header class="flex items-center justify-between mb-2">
-            <h2 class="text-xl md:text-3xl font-black text-white tracking-tight">記得同大家報技能CD</h2>
-            <button id="settings-btn"
-                class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-2 rounded-lg transition text-sm">
-                ⚙️
-            </button>
+            <h2 class="text-lg md:text-3xl font-black text-white tracking-tight">記得同大家報技能CD</h2>
+            <div class="flex items-center gap-2">
+                <div class="flex items-center">
+                    <span id="ionian-dot" class="haste-dot inactive" title="艾歐尼亞靴 +10"></span>
+                    <span id="cosmic-dot" class="haste-dot inactive" title="星界洞悉 +18"></span>
+                </div>
+                <button id="settings-btn"
+                    class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-2 rounded-lg transition text-sm">
+                    ⚙️
+                </button>
+            </div>
         </header>
 
         <!-- Spell Grid (5 Rows x 3 Cols) -->
-        <div class="flex-1 flex flex-col justify-around gap-2 md:gap-4">
+        <div class="flex-1 flex flex-col justify-around gap-1.5 md:gap-4 max-h-full overflow-hidden">
 
             <!-- TOP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
