--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         /* Timer display */
         .cooldown-timer {
-            font-size: 3.5rem;
+            font-size: 2.75rem;
             font-weight: 700;
             color: #ffffff;
             letter-spacing: -0.02em;
@@ -178,26 +178,26 @@
     <div id="app-container" class="hidden h-full flex flex-col p-3 md:p-6">
 
         <!-- Header -->
-        <header class="flex items-center justify-between mb-2">
-            <h2 class="text-lg md:text-3xl font-black text-white tracking-tight">記得同大家報技能CD</h2>
-            <div class="flex items-center gap-2">
-                <div class="flex items-center">
-                    <span id="ionian-dot" class="haste-dot inactive" title="艾歐尼亞靴 +10"></span>
-                    <span id="cosmic-dot" class="haste-dot inactive" title="星界洞悉 +18"></span>
-                </div>
-                <button id="settings-btn"
-                    class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-2 rounded-lg transition text-sm">
-                    ⚙️
-                </button>
-            </div>
+        <header class="flex items-center justify-between mb-1.5">
+            <h2 class="text-base md:text-3xl font-black text-white tracking-tight">記得同大家報技能CD</h2>
+            <button id="settings-btn"
+                class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-1.5 rounded-lg transition text-xs">
+                ⚙️
+            </button>
         </header>
 
         <!-- Spell Grid (5 Rows x 3 Cols) -->
-        <div class="flex-1 flex flex-col justify-around gap-1.5 md:gap-4 max-h-full overflow-hidden">
+        <div class="flex-1 flex flex-col justify-around gap-1 md:gap-4 max-h-full overflow-hidden">
 
             <!-- TOP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="text-xl md:text-2xl font-bold text-cyan-400 w-16 md:w-20">TOP</div>
+                <div class="w-14 md:w-20">
+                    <div class="text-lg md:text-2xl font-bold text-cyan-400">TOP</div>
+                    <div class="flex gap-1 mt-0.5">
+                        <span class="haste-dot inactive" data-role="top" data-haste="ionian"></span>
+                        <span class="haste-dot inactive" data-role="top" data-haste="cosmic"></span>
+                    </div>
+                </div>
                 <button
                     class="spell-btn relative aspect-square bg-slate-800 rounded-lg overflow-hidden border-2 border-slate-700 hover:border-cyan-500 transition"
                     data-role="top" data-spell="1">
@@ -215,7 +215,13 @@
 
             <!-- JG -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="text-xl md:text-2xl font-bold text-green-400 w-16 md:w-20">JG</div>
+                <div class="w-14 md:w-20">
+                    <div class="text-lg md:text-2xl font-bold text-green-400">JG</div>
+                    <div class="flex gap-1 mt-0.5">
+                        <span class="haste-dot inactive" data-role="jg" data-haste="ionian"></span>
+                        <span class="haste-dot inactive" data-role="jg" data-haste="cosmic"></span>
+                    </div>
+                </div>
                 <button
                     class="spell-btn relative aspect-square bg-slate-800 rounded-lg overflow-hidden border-2 border-slate-700 hover:border-cyan-500 transition"
                     data-role="jg" data-spell="1">
@@ -232,7 +238,13 @@
 
             <!-- MID -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="text-xl md:text-2xl font-bold text-purple-400 w-16 md:w-20">MID</div>
+                <div class="w-14 md:w-20">
+                    <div class="text-lg md:text-2xl font-bold text-purple-400">MID</div>
+                    <div class="flex gap-1 mt-0.5">
+                        <span class="haste-dot inactive" data-role="mid" data-haste="ionian"></span>
+                        <span class="haste-dot inactive" data-role="mid" data-haste="cosmic"></span>
+                    </div>
+                </div>
                 <button
                     class="spell-btn relative aspect-square bg-slate-800 rounded-lg overflow-hidden border-2 border-slate-700 hover:border-cyan-500 transition"
                     data-role="mid" data-spell="1">
@@ -249,7 +261,13 @@
 
             <!-- AD -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="text-xl md:text-2xl font-bold text-red-400 w-16 md:w-20">AD</div>
+                <div class="w-14 md:w-20">
+                    <div class="text-lg md:text-2xl font-bold text-red-400">AD</div>
+                    <div class="flex gap-1 mt-0.5">
+                        <span class="haste-dot inactive" data-role="ad" data-haste="ionian"></span>
+                        <span class="haste-dot inactive" data-role="ad" data-haste="cosmic"></span>
+                    </div>
+                </div>
                 <button
                     class="spell-btn relative aspect-square bg-slate-800 rounded-lg overflow-hidden border-2 border-slate-700 hover:border-cyan-500 transition"
                     data-role="ad" data-spell="1">
@@ -267,7 +285,13 @@
 
             <!-- SUP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="text-xl md:text-2xl font-bold text-yellow-400 w-16 md:w-20">SUP</div>
+                <div class="w-14 md:w-20">
+                    <div class="text-lg md:text-2xl font-bold text-yellow-400">SUP</div>
+                    <div class="flex gap-1 mt-0.5">
+                        <span class="haste-dot inactive" data-role="sup" data-haste="ionian"></span>
+                        <span class="haste-dot inactive" data-role="sup" data-haste="cosmic"></span>
+                    </div>
+                </div>
                 <button
                     class="spell-btn relative aspect-square bg-slate-800 rounded-lg overflow-hidden border-2 border-slate-700 hover:border-cyan-500 transition"
                     data-role="sup" data-spell="1">
