--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         <!-- Header -->
         <header class="flex items-center justify-between mb-1 shrink-0">
-            <h2 class="text-base md:text-3xl font-black text-white tracking-tight">記得報技能CD</h2>
+            <h2 class="text-3xl md:text-5xl font-black text-white tracking-tight">記得報技能CD</h2>
             <button id="settings-btn"
                 class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-1.5 rounded-lg transition text-xs">
                 ⚙️
@@ -191,8 +191,8 @@
 
             <!-- TOP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-14 md:w-20">
-                    <div class="text-lg md:text-2xl font-bold text-cyan-400">TOP</div>
+                <div class="w-24 md:w-32">
+                    <div class="text-3xl md:text-4xl font-bold text-cyan-400">TOP</div>
                     <div class="flex gap-1 mt-0.5">
                         <span class="haste-dot inactive" data-role="top" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="top" data-haste="cosmic"></span>
@@ -220,8 +220,8 @@
 
             <!-- JG -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-14 md:w-20">
-                    <div class="text-lg md:text-2xl font-bold text-green-400">JG</div>
+                <div class="w-24 md:w-32">
+                    <div class="text-3xl md:text-4xl font-bold text-green-400">JG</div>
                     <div class="flex gap-1 mt-0.5">
                         <span class="haste-dot inactive" data-role="jg" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="jg" data-haste="cosmic"></span>
@@ -249,8 +249,8 @@
 
             <!-- MID -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-14 md:w-20">
-                    <div class="text-lg md:text-2xl font-bold text-purple-400">MID</div>
+                <div class="w-24 md:w-32">
+                    <div class="text-3xl md:text-4xl font-bold text-purple-400">MID</div>
                     <div class="flex gap-1 mt-0.5">
                         <span class="haste-dot inactive" data-role="mid" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="mid" data-haste="cosmic"></span>
@@ -277,8 +277,8 @@
 
             <!-- AD -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-14 md:w-20">
-                    <div class="text-lg md:text-2xl font-bold text-red-400">AD</div>
+                <div class="w-24 md:w-32">
+                    <div class="text-3xl md:text-4xl font-bold text-red-400">AD</div>
                     <div class="flex gap-1 mt-0.5">
                         <span class="haste-dot inactive" data-role="ad" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="ad" data-haste="cosmic"></span>
@@ -306,8 +306,8 @@
 
             <!-- SUP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-14 md:w-20">
-                    <div class="text-lg md:text-2xl font-bold text-yellow-400">SUP</div>
+                <div class="w-24 md:w-32">
+                    <div class="text-3xl md:text-4xl font-bold text-yellow-400">SUP</div>
                     <div class="flex gap-1 mt-0.5">
                         <span class="haste-dot inactive" data-role="sup" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="sup" data-haste="cosmic"></span>
