--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <title>Spell Tracker</title>
 
+    <meta name="theme-color" content="#111827">
+
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <!-- Tailwind CSS CDN -->
@@ -27,13 +29,13 @@
         body {
             margin: 0;
             padding: 0;
-            margin: 0;
-            padding: 0;
             min-height: 100dvh;
             overflow-y: auto;
             -webkit-tap-highlight-color: transparent;
             user-select: none;
             -webkit-user-select: none;
+            background-color: #111827;
+            /* Force dark background */
         }
 
         /* Warning animation - subtle fade */
@@ -179,7 +181,8 @@
     </div>
 
     <!-- Main App Container -->
-    <div id="app-container" class="hidden min-h-full flex flex-col p-3 md:p-6">
+    <div id="app-container"
+        class="hidden min-h-full flex flex-col p-3 md:p-6 pt-[calc(env(safe-area-inset-top)+0.75rem)]">
 
         <!-- Header -->
         <header class="flex items-center justify-between mb-1 shrink-0">
@@ -226,7 +229,7 @@
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
                 <div class="w-24 md:w-32 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-green-400">JG</div>
-                    <div class="flex gap-1 mt-0.5">
+                    <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="jg" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="jg" data-haste="cosmic"></span>
                     </div>
@@ -255,7 +258,7 @@
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
                 <div class="w-24 md:w-32 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-purple-400">MID</div>
-                    <div class="flex gap-1 mt-0.5">
+                    <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="mid" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="mid" data-haste="cosmic"></span>
                     </div>
@@ -283,7 +286,7 @@
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
                 <div class="w-24 md:w-32 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-red-400">AD</div>
-                    <div class="flex gap-1 mt-0.5">
+                    <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="ad" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="ad" data-haste="cosmic"></span>
                     </div>
@@ -312,7 +315,7 @@
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
                 <div class="w-24 md:w-32 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-yellow-400">SUP</div>
-                    <div class="flex gap-1 mt-0.5">
+                    <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="sup" data-haste="ionian"></span>
                         <span class="haste-dot inactive" data-role="sup" data-haste="cosmic"></span>
                     </div>
