--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
         class="hidden min-h-full flex flex-col p-3 md:p-6 pt-[calc(env(safe-area-inset-top)+0.75rem)]">
 
         <!-- Header -->
-        <header class="flex items-center justify-between mb-1 shrink-0">
-            <h2 class="text-2xl md:text-4xl font-black text-white tracking-tight">記得報技能CD</h2>
+        <header class="flex items-center justify-between mb-3 py-2 shrink-0">
+            <h2 class="text-2xl md:text-4xl font-black text-white tracking-tight">嬴多鋪先瞓</h2>
             <button id="settings-btn"
                 class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-1.5 rounded-lg transition text-xs">
                 ⚙️
@@ -198,7 +198,7 @@
 
             <!-- TOP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-24 md:w-32 flex flex-col items-center justify-center">
+                <div class="w-28 md:w-36 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-cyan-400">TOP</div>
                     <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="top" data-haste="ionian"></span>
@@ -227,7 +227,7 @@
 
             <!-- JG -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-24 md:w-32 flex flex-col items-center justify-center">
+                <div class="w-28 md:w-36 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-green-400">JG</div>
                     <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="jg" data-haste="ionian"></span>
@@ -256,7 +256,7 @@
 
             <!-- MID -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-24 md:w-32 flex flex-col items-center justify-center">
+                <div class="w-28 md:w-36 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-purple-400">MID</div>
                     <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="mid" data-haste="ionian"></span>
@@ -284,7 +284,7 @@
 
             <!-- AD -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-24 md:w-32 flex flex-col items-center justify-center">
+                <div class="w-28 md:w-36 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-red-400">AD</div>
                     <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="ad" data-haste="ionian"></span>
@@ -313,7 +313,7 @@
 
             <!-- SUP -->
             <div class="grid grid-cols-[auto_1fr_1fr] gap-2 md:gap-3 items-center">
-                <div class="w-24 md:w-32 flex flex-col items-center justify-center">
+                <div class="w-28 md:w-36 flex flex-col items-center justify-center">
                     <div class="text-3xl md:text-4xl font-bold text-yellow-400">SUP</div>
                     <div class="flex gap-1 mt-3">
                         <span class="haste-dot inactive" data-role="sup" data-haste="ionian"></span>
@@ -438,7 +438,7 @@
             <div class="mt-8 pt-6 border-t border-slate-700">
                 <button id="reset-all-btn"
                     class="w-full bg-red-500/10 hover:bg-red-500/20 text-red-400 font-semibold py-3 rounded-xl border border-red-500/50 transition flex items-center justify-center gap-2">
-                    <span>⚠️ 重置所有狀態</span>
+                    <span>⚠️ 重置</span>
                 </button>
             </div>
 
