--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         class="fixed inset-0 bg-gradient-to-br from-blue-900 via-purple-900 to-indigo-900 flex items-center justify-center z-50">
         <div class="text-center px-6">
             <h1 class="text-4xl md:text-5xl font-black text-white mb-4 tracking-tight">Spell Tracker</h1>
-            <p class="text-gray-300 mb-8 text-lg">Legends Never Die</p>
+            <p class="text-gray-300 mb-8 text-lg">Developed by 壹伍參漆的四宮輝夜</p>
             <button id="start-btn"
                 class="bg-gradient-to-r from-cyan-500 to-blue-600 hover:from-cyan-600 hover:to-blue-700 text-white font-bold text-xl px-12 py-4 rounded-xl shadow-2xl transform transition hover:scale-105 active:scale-95">
                 嬴多鋪先瞓啦
@@ -186,7 +186,7 @@
 
         <!-- Header -->
         <header class="flex items-center justify-between mb-3 py-2 shrink-0">
-            <h2 class="text-2xl md:text-4xl font-black text-white tracking-tight">嬴多鋪先瞓</h2>
+            <h2 class="text-2xl md:text-4xl font-black text-white tracking-tight">有無權打多鋪</h2>
             <button id="settings-btn"
                 class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-1.5 rounded-lg transition text-xs">
                 ⚙️
