--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <!-- Header -->
         <header class="flex items-center justify-between mb-3 py-2 shrink-0">
-            <h2 class="text-2xl md:text-4xl font-black text-white tracking-tight">有無權打多鋪</h2>
+            <h2 class="text-2xl md:text-4xl font-black text-white tracking-tight">有無權打多鋪XD</h2>
             <button id="settings-btn"
                 class="bg-slate-700 hover:bg-slate-600 text-white font-semibold px-3 py-1.5 rounded-lg transition text-xs">
                 ⚙️
@@ -359,7 +359,8 @@
             <div class="mb-6">
                 <h4 class="text-lg font-bold text-cyan-400 mb-3">更換技能</h4>
                 <div class="space-y-2">
-                    <select id="spell-role-select" class="w-full bg-slate-700 text-white rounded-lg px-4 py-2 mb-2">
+                    <select id="spell-role-select"
+                        class="w-full bg-slate-700 text-white text-xl font-bold rounded-lg px-4 py-4 mb-2">
                         <option value="top">TOP</option>
                         <option value="jg">JG</option>
                         <option value="mid">MID</option>
