--- a/index.html
+++ b/index.html
@@ -435,13 +435,10 @@
                 套用設定
             </button>
 
-            <!-- Danger Zone -->
-            <div class="mt-8 pt-6 border-t border-slate-700">
-                <button id="reset-all-btn"
-                    class="w-full bg-red-500/10 hover:bg-red-500/20 text-red-400 font-semibold py-3 rounded-xl border border-red-500/50 transition flex items-center justify-center gap-2">
-                    <span>⚠️ 重置</span>
-                </button>
-            </div>
+            <button id="reset-all-btn"
+                class="w-full mt-4 bg-red-500/10 hover:bg-red-500/20 text-red-400 font-semibold py-3 rounded-xl border border-red-500/50 transition flex items-center justify-center gap-2">
+                <span>⚠️ 重置</span>
+            </button>
 
         </div>
     </div>
